--- a/app/views/bookreview/index.html.erb
+++ b/app/views/bookreview/index.html.erb
@@ -1,5 +1,7 @@
+
   <% @bookreviews.each do |bookreviews| %>
-    <%= bookreviews.name %>
+    <%= link_to 'bookreviews.image', "/bookreview/#{bookreview.id}", method: :get %>
+    <%= link_to 'bookreviews.name', "/bookreview/#{bookreview.id}", method: :get %>
     <%= bookreviews.description %>
     <%= bookreviews.price %>
     <%= bookreviews.publisher %>
