--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>BookReview</title>
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,19 +10,26 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   
-    <header class="header">
-      <h1 class="title"><a href="/">BookReview</a></h1>
-      <% if user_signed_in? %>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      <% else %>
-          <%= link_to "ログイン", new_user_session_path, class: 'post' %>
-          <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
-      <% end %>
-  </header>
 
   <body>
+      <header class="header">
+        <h1 class="title"><a href="/">BookReview</a></h1>
+        <% if user_signed_in? %>
+            <%= current_user.nickname %>
+            <a href="/users/">ユーザー一覧</a>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        <% else %>
+            <%= link_to "ログイン", new_user_session_path, class: 'post' %>
+            <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
+        <% end %>
+    </header>
     
     <%= yield %>
     
+      <footer>
+      <p>
+        Copyright PicTweet 2014.
+      </p>
+    </footer>
   </body>
 </html>
