--- a/app/views/bookreview/_bookreview.html.erb
+++ b/app/views/bookreview/_bookreview.html.erb
@@ -1,5 +1,7 @@
     <%= link_to 'bookreview.image', "/bookreview/#{bookreview.id}", method: :get %>
     <%= link_to 'bookreview.name', "/bookreview/#{bookreview.id}", method: :get %>
+    <%= bookreview.image %>
+    <%= bookreview.name %>
     <%= bookreview.description %>
     <%= bookreview.price %>
     <%= bookreview.publisher %>
