application.html.erbの変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,7 @@
     <%= yield %>
     
       <footer>
-      <p>
-        Copyright PicTweet 2014.
-      </p>
-    </footer>
+        <p>Bookレビュー©2020.All Rights Reserved.</p>
+      </footer>
   </body>
 </html>
