--- a/app/views/bookreview/index.html.erb
+++ b/app/views/bookreview/index.html.erb
@@ -1,5 +1,6 @@
-
+<div class="contents row">
   <% @bookreviews.each do |bookreview| %>
     <%= render partial: "bookreview", locals: { bookreview: bookreview } %>
   <% end %>
   <%= paginate(@bookreviews) %>
+</div>
