--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -3,7 +3,7 @@
             <h1>Bookレビュー</h1>
             <p>Bookレビューは書籍レビューサイトです。<br>
             みんなのレビューを参考に、自分にぴったりの本を探してみませんか？</p>
-            <a href="/users/">書籍一覧を見る</a>
+            <a href="/bookreview">書籍一覧を見る</a>
             <a href="/users/">書籍を検索する</a>
         </div>
     </div>
