--- a/app/views/bookreview/_bookreview.html.erb
+++ b/app/views/bookreview/_bookreview.html.erb
@@ -1,7 +1,22 @@
-    <%= link_to 'bookreview.image', "/bookreview/#{bookreview.id}", method: :get %>
-    <%= link_to 'bookreview.name', "/bookreview/#{bookreview.id}", method: :get %>
-    <%= bookreview.image %>
-    <%= bookreview.name %>
-    <%= bookreview.description %>
-    <%= bookreview.price %>
-    <%= bookreview.publisher %>
+
+<div class="box_wrapper">
+    <div class="box">
+        <div class="box_image_frame">
+            <a href="/bookreview/<%= bookreview.id %>">
+                <div class="box_image" style="background-image: url(<%= bookreview.image_url %>);">
+                </div>
+            </a>
+        </div>
+        <div class="box_title_frame">
+            <div class="box_title" title="<%= bookreview.title %>">
+            <%= bookreview.title %>
+            </div>
+            <div class="assess">
+            <p>星</p>
+            </div>
+            <div class="favorite">
+            <p>お気に入り</p>
+            </div>
+        </div>
+    </div>
+</div>
