--- a/app/views/bookreview/show.html.erb
+++ b/app/views/bookreview/show.html.erb
@@ -1,27 +1,73 @@
+<div class="books_details">
+  <div class="books_details_sentence">
+  <h2>書籍詳細情報</h2>
+  </div>
 
+  <div class="show">
+    <div class="show_image"><%= image_tag @bookreviews.image_url,:size =>'180x250'%>
+    </div>
+    <div class="show_sentence">
+<table>
+    <tr>
+        <td width="100">書籍名</td>
+        <td><%= @bookreviews.title %></td>
+    </tr>
+    <tr>
+        <td>価格</td>
+        <td><%= @bookreviews.price %></td>
+    </tr>    
+    <tr>
+        <td>著者</td>
+        <td><%= @bookreviews.author %></td>
+    </tr>
+    <tr>
+        <td>発売日</td>
+        <td><%= @bookreviews.release_date %></td>
+    </tr>
+    <tr>
+        <td>内容説明</td>
+        <td><%= @bookreviews.description %></td>
+    <tr>
+      <td>出版社</td>
+      <td><%= @bookreviews.publisher %></td>
+    </tr>
+</table>
 
-  <% @bookreviews.each do |bookreviews| %>
-    <%= bookreviews.image %>
-    <%= bookreviews.name %>
-    <%= bookreviews.description %>
-    <%= bookreviews.price %>
-    <%= bookreviews.publisher %>
-  <% end %>
-  
+    </div>
+  </div>
+
+  <div class="container"> 
     <!-- ここからフォーム -->
     <% if current_user %>
-      <%= form_tag("/bookreview/#{@bookreviews.id}/comments", method: :post) do %>
-        <textarea name="text" placeholder="コメントする" rows="2" cols="30"></textarea>
-        <input type="submit" value="SENT">
-      <% end %>
+        <%= form_for [@bookreviews, @comments] do |f| %>
+          <div style="margin: 8px 0">
+            <%= f.label :評価, style: { 'margin-right' => 8 } %>
+            <%= f.number_field :rate, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } %>
+          </div>
+          <div style="margin: 8px 0">
+            <%= f.text_area :text, placeholder: 'レビューを書いてね！', style: 'width: 100%; height: 300px;' %>
+          </div>
+          <div class="row">
+            <div class="col10 push1">
+              <%= button_tag type: "submit", class: "btn btn--block" do %>
+              投稿する<i class="icon-arrow-right"></i>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
     <% end %>
 
+    <div class="comments">   
       <h4>＜コメント一覧＞</h4>
-      <% if @comments %>
-        <% @comments.each do |comment| %>
+      <% if @remarks %>
+        <% @remarks.each do |remark| %>
           <p>
-            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %></strong>
-            <%= comment.text %>
+            <strong><%= link_to remark.user.nickname, "/users/#{remark.user_id}" %>：</strong>
+            <%= remark.text %>
           </p>
         <% end %>
       <% end %>
+    </div>
+
+  </div>
+</div>
