--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,12 +4,12 @@
 
   <h2>Sign up</h2>
 
-  <div class="field">
+  <div class="field1">
     <%= f.label :email %><br />
     <%= f.email_field :email %>
   </div>
 
-  <div class="field">
+  <div class="field2">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -17,7 +17,7 @@
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
+  <div class="field3">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
