--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,11 @@
 
   <body>
     <header>
-          <div class="user_nav">
-            <div class="root"><a href="/">BookReview</a>
-              <a href="/">書籍一覧</a>
-              <a href="/">書籍検索</a>
-            </div>
+      <div class="user_nav">
+          <div class="root"><a href="/">BookReview</a>
+            <a href="/bookreview">書籍一覧</a>
+          </div>
             <% if user_signed_in? %>
-              <%= current_user.nickname %>
               <ul>
                 <li><a href="/users/">ユーザー一覧</a></li>
                 <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
@@ -29,7 +27,12 @@
                 <li><%= link_to "新規登録", new_user_registration_path, class: 'post' %></li>
               </ul>
             <% end %>
-          </div>
+            <%= form_tag('/bookreview/search', method: :get,class: "search_form") do %>
+              <input class="input_search" name="keyword" placeholder="書籍のタイトルを入力" type="text"><button class="button-search" title="検索" type="submit" value="検索">検索</button></input>
+            <% end %>
+               <!--<form accept-charset="utf-8" action="/" class="js-search-submit" method="get">-->
+               <!--</form>-->
+      </div>
     </header>
     
     <%= yield %>
