--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -18,27 +18,7 @@ body{
 }
 
 header {
-        display: flex;
-      cursor: pointer;
-}
-
-.button-search {
-  display       : inline-block;
-  border-radius : 5%;          /* 角丸       */
-  font-size     : 8pt;        /* 文字サイズ */
-  text-align    : center;      /* 文字位置   */
-  cursor        : pointer;     /* カーソル   */
-  padding       : 12px 12px;   /* 余白       */
-  background    : #ffffff;     /* 背景色     */
-  color         : #000000;     /* 文字色     */
-  line-height   : 1em;         /* 1行の高さ  */
-  opacity       : 1;           /* 透明度     */
-  transition    : .3s;         /* なめらか変化 */
-  box-shadow    : 1px 1px 3px #666666;  /* 影の設定 */
-}
-.button-search:hover {
-  box-shadow    : none;        /* カーソル時の影消去 */
-  opacity       : 0.9;         /* カーソル時透明度 */
+    cursor: pointer;
 }
 
 .user_nav {
@@ -56,15 +36,8 @@ header {
     line-height: 55px;
 }
 
-form.search_form{
-}
-
-.root a{
-      color: white;
-      padding-left: 70px;
-}
-
-.root{
+.user_nav a:hover{
+ color: #FF4500;
 }
 
 ul{
@@ -72,11 +45,84 @@ ul{
     justify-content: space-evenly;
 }
 
-ul li a{
+ul.foo li a{
     line-height: 55px;
     color: white;
     list-style: none;
-    padding-left: 70px;
+}
+
+ul.foo {
+  width: 1320px;
+  padding:0;
+}
+
+ul.foo li {
+  display: inline-block;
+  text-align: center;
+}
+
+ul.foo li a {
+  display: block;
+}
+
+li {
+// margin-right: 8px;
+}
+
+form.search_form{
+    font-size: 19px;
+}
+
+.input_search{
+    outline: #FF4500;
+    border-radius: 1px;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    margin-right: 9px;
+}
+
+.input_search:focus{
+	border: 1px solid #FF4500;
+}
+
+input::placeholder {
+  font-size: 18px;
+}
+
+.button-search{
+//   -webkit-transform: translateY(-50%) translateX(-50%);
+  transform: translateY(15%) translateX(-9%);
+  position: relative;
+  display       : inline-block;
+  border-radius : 5%;          /* 角丸       */
+  font-size     : 8pt;        /* 文字サイズ */
+  cursor        : pointer;     /* カーソル   */
+  background    : #ffffff;     /* 背景色     */
+  color         : #000000;     /* 文字色     */
+  opacity       : 1;           /* 透明度     */
+  transition    : .3s;         /* なめらか変化 */
+  box-shadow    : 1px 1px 3px #666666;  /* 影の設定 */
+  width: 49px;
+  outline: #FF4500;
+  height: 24px;
+  line-height: 29px;
+  text-align: center;
+// 　position:absolute;
+//   display: table-cell;
+//   border-top: 10px;
+//   margin-top: 1px;
+//   padding-bottom: 10px;
+//   padding-top: 10px;
+}
+
+.button-search:active {
+  opacity       : 0.9;         /* カーソル時透明度 */
+  border: 1px solid #FF4500;
+}
+
+.button-search2 {
+    position: absolute;
+    bottom: -4px;
+    right: 9px;
 }
 
 footer{
@@ -103,6 +149,7 @@ footer{
   text-align: center;
   padding-top: 300px;
   display: block;
+  font-size: 17px;
 }
 
 .main a{
@@ -124,7 +171,27 @@ footer{
 //   text-align: center;
 // }
 
+.list-botton-left {
+    display: inline-block;
+    width: 160px;
+    height: 34px;
+    border-radius: 5px;
+    background-color: #000000;
+    opacity: 1;
+    margin-right: 5px;
+    line-height: 33px;
+}
 
+.list-botton-right {
+    display: inline-block;
+    width: 160px;
+    height: 34px;
+    border-radius: 5px;
+    background-color: black;
+    opacity: 1;
+    margin-left: 5px;
+    line-height: 33px;
+}
 
 // devise/registrations/new.html.erb
 // devise/sessions/new.html.erb
@@ -135,7 +202,9 @@ header a {
 }
 
 header a:hover {
-  color: red;
+//   color: #FF5F17;
+//   color: #FF4F02;
+color: #FF4500;
 }
 
 .field1 {
@@ -310,7 +379,7 @@ input[type="submit"]:hover {
     padding-bottom: 20px;
 }
 
-// show.html.erb
+// bookreview/show.html.erb
 
 .books_details{
     margin: 0 auto;
@@ -328,7 +397,7 @@ input[type="submit"]:hover {
   padding: 100px;
 }
 
-.show_image{
+.bookreview_show_image{
 }
 
 .show_sentence tr{
@@ -348,6 +417,352 @@ input[type="submit"]:hover {
     height: 230px;
 }
 
+// 星
+
+[class^="icon-"],
+[class*=" icon-"],
+.rating-star,
+.rating-star-score:before,
+.rating-star-cancel:before,
+.rating-star-cancel {
+    font-family: 'bambi';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
 
 
 
+
+
+.icon-star:before,
+.rating-star-score:before {
+    content: "\2605"
+}
+.icon-soldout:before,
+.rating-star-cancel:before,
+a.btn-schedule.is-unsold-3 .icon-unsold:before,
+span.btn-schedule.is-unsold-3 .icon-unsold:before {
+    content: "\e60e"
+}
+
+.rating-star {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    width: auto;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.1)
+}
+.bgcolor-black .rating-star,
+.bgcolor-gray-dark .rating-star,
+.bgcolor-gray-darker .rating-star {
+    color: rgba(255, 255, 255, 0.05)
+}
+.rating-star:before {
+    content: "\2605\2605\2605\2605\2605"
+}
+.rating-star > .star-actived,
+.rating-star > .star-distribution {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 0;
+    color: #F5A624;
+    font-style: normal;
+    word-wrap: normal
+}
+.rating-star > .star-actived:before,
+.rating-star > .star-distribution:before {
+    content: "\2605\2605\2605\2605\2605"
+}
+.rating-star > .star-distribution {
+    color: #8b8e96
+}
+.rating-star .rate-100 {
+    width: 100%
+}
+.rating-star .rate-90 {
+    width: 90%
+}
+.rating-star .rate-80 {
+    width: 80%
+}
+.rating-star .rate-70 {
+    width: 70%
+}
+.rating-star .rate-60 {
+    width: 60%
+}
+.rating-star .rate-50 {
+    width: 50%
+}
+.rating-star .rate-40 {
+    width: 40%
+}
+.rating-star .rate-30 {
+    width: 30%
+}
+.rating-star .rate-20 {
+    width: 20%
+}
+.rating-star .rate-10 {
+    width: 10%
+}
+.rating-star .rate-5 {
+    width: 100%
+}
+.rating-star .rate-4 {
+    width: 80%
+}
+.rating-star .rate-3 {
+    width: 60%
+}
+.rating-star .rate-2 {
+    width: 40%
+}
+.rating-star .rate-1 {
+    width: 20%
+}
+.rating-score {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1;
+    filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+    opacity: 0.8
+}
+.graph-bar {
+    display: block;
+    position: relative;
+    text-align: left;
+    vertical-align: middle;
+    height: 2px;
+    background-color: rgba(0, 0, 0, 0.1)
+}
+.bgcolor-black .graph-bar,
+.bgcolor-gray-dark .graph-bar,
+.bgcolor-gray-darker .graph-bar {
+    background-color: rgba(255, 255, 255, 0.05)
+}
+.graph-bar__active {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2px
+}
+.rating-distribution {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin: 0 0 0.5em;
+}
+.rating-distribution > li {
+    display: table-row
+}
+.rating-distribution__cell,
+.rating-distribution__cell-bar,
+.rating-distribution__cell-star,
+.rating-distribution__cell-value {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 0 1em 0.2em 0;
+    line-height: 1
+}
+.rating-distribution__cell-star {
+    width: 5em
+}
+.rating-distribution__cell-label {
+    width: 8em
+}
+.rating-distribution__cell-bar {
+    vertical-align: middle
+}
+.rating-input-group input[type=checkbox],
+.rating-input-group input[type=radio] {
+    display: none
+}
+.rating-star-cancel,
+.rating-star-score {
+    color: rgba(0, 0, 0, 0.1);
+    position: relative;
+    display: inline-block;
+    width: auto;
+    vertical-align: middle
+}
+.bgcolor-black .rating-star-cancel,
+.bgcolor-black .rating-star-score,
+.bgcolor-gray-dark .rating-star-cancel,
+.bgcolor-gray-dark .rating-star-score,
+.bgcolor-gray-darker .rating-star-cancel,
+.bgcolor-gray-darker .rating-star-score {
+    color: rgba(255, 255, 255, 0.05)
+}
+.rating-star-score {
+    margin: 2px
+}
+.on .rating-star-score {
+    color: #F5A624
+}
+.rating-star-cancel {
+    filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
+    opacity: 0.3;
+    color: #8b8e96;
+    margin: 2px 0.5em 2px 2px;
+}
+.bgcolor-black .rating-star-cancel,
+.bgcolor-gray-dark .rating-star-cancel,
+.bgcolor-gray-darker .rating-star-cancel {
+    color: #686c73
+}
+.is-active .rating-star-cancel {
+    filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=75);
+    opacity: 0.75
+}
+.is-active .rating-star-cancel:hover {
+    filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+    opacity: 1
+}
+.checkbutton--imageword {
+    float: left;
+    width: 10em;
+    margin: 0 0.8em 0.8em 0
+}
+.checkbutton--imageword input[type="checkbox"]+.btn,
+.checkbutton--imageword input[type="checkbox"]+a.btn-schedule,
+.checkbutton--imageword .schedulenav > li > input[type="checkbox"]+a,
+.checkbutton--imageword .schedulenav > li > input[type="checkbox"]+span {
+    display: inline-block;
+    text-align: left;
+    width: 10em
+}
+.rating-detail,
+.rating-total {
+    display: table
+}
+.rating-total dd label {
+    display: block;
+    float: left;
+    height: 1.7em;
+    margin: 0 0 0.5em
+}
+.rating-total dd input[type="radio"] {
+    visibility: hidden;
+    position: absolute;
+    width: 1.7em;
+    height: 1.7em
+}
+.rating-detail dt {
+    display: table-cell;
+    vertical-align: middle;
+    width: 5em;
+    margin: 0 0 0.5em
+}
+.rating-detail dd {
+    display: table-cell;
+    vertical-align: middle
+}
+.rating-detail dd label {
+    display: inline-block;
+    height: 1.5em;
+    margin: 0 0 0.5em
+}
+.rating-detail dd input[type="radio"] {
+    visibility: hidden;
+    position: absolute;
+    width: 1.5em;
+    height: 1.5em
+}
+.rating-detail dd:hover label .rating-star-score,
+.rating-total dd:hover label .rating-star-score {
+    color: rgba(219, 200, 50, 0.8)
+}
+.rating-detail dd label:hover ~ label .rating-star-score,
+.rating-total dd label:hover ~ label .rating-star-score {
+    color: rgba(0, 0, 0, 0.1)
+}
+.bgcolor-black .rating-detail dd label:hover ~ label .rating-star-score,
+.bgcolor-black .rating-total dd label:hover ~ label .rating-star-score,
+.bgcolor-gray-dark .rating-detail dd label:hover ~ label .rating-star-score,
+.bgcolor-gray-dark .rating-total dd label:hover ~ label .rating-star-score,
+.bgcolor-gray-darker .rating-detail dd label:hover ~ label .rating-star-score,
+.bgcolor-gray-darker .rating-total dd label:hover ~ label .rating-star-score {
+    color: rgba(255, 255, 255, 0.05)
+}
+
+            .rating-star,
+            .star-actived {
+                line-height: 1.5;
+            }
+
+
+
+
+// user/show.html.erb
+
+.user_show{
+    margin: 0 auto;
+    width: 960px;
+    height: 100%;
+}
+
+.user_image img{
+    width: 150px;
+    height: 200px;
+}
+
+// user/_comment.html.erb
+
+.bookreview_image_user{
+    width: 150px;
+    height: 200px;
+}
+
+
+
+
+
+
+
+
+
+// .books_details_sentence h2{
+//     margin-top: 145px;
+//     text-align: center;
+// }
+
+// .show{
+//   display: flex;
+//   padding: 100px;
+// }
+
+// .bookreview_show_image{
+// }
+
+// .show_sentence tr{
+//     flex-direction:column;
+//     list-style: none;
+//     margin: 0;
+// 	padding: 0;
+// }
+
+// .show_sentence tr td{
+// 	padding: 10px 20px;
+// 	text-align: left;
+// }
+
+// .til{
+//     width: 200px;
+//     height: 230px;
+// }
