--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="field1">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email,autofocus: true, :placeholder => 'メールアドレスを入力' %>
   </div>
 
   <div class="field2">
@@ -14,12 +14,18 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password",:placeholder => 'パスワードを入力'%>
   </div>
 
   <div class="field3">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :placeholder => 'パスワードを入力（確認）' %>
+  </div>
+  
+  <div class="field4"><%= f.label :nickname %><br />
+    <%= f.text_field :nickname, placeholder: 'ニックネームを入力(必須)' %> %></div>
+    <div class="field">
+    <%= f.file_field :image %>
   </div>
 
   <div class="actions">
