--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -2,8 +2,14 @@
         <div class="main-content">
             <h1>Bookレビュー</h1>
             <p>Bookレビューは書籍レビューサイトです。<br>
+            <br>
             みんなのレビューを参考に、自分にぴったりの本を探してみませんか？</p>
-            <a href="/bookreview">書籍一覧を見る</a>
-            <a href="/users/">書籍を検索する</a>
+            <br>
+            <div class="list-botton-left">
+                <a href="/bookreview">書籍の一覧を見る</a>
+            </div>
+            <div class="list-botton-right">
+                <a href="/ranking">ランキングを検索</a>
+            </div>
         </div>
     </div>
