--- a/app/views/users/_comment.html.erb
+++ b/app/views/users/_comment.html.erb
@@ -7,8 +7,8 @@
               <div class="bookreview_image_user" style="background-image: url(<%= comment.bookreview.image_url %>);"></div>
                     <div class="title"><%= comment.bookreview.title %></div>
                     <span class="star"><span class="rating-star"><i class="star-actived rate-<%= comment.rate %>0"></i></span></span>
-                    <div class="updated_day"><time><%= time_ago_in_words comment.bookreview.updated_at %></time></div>
-                          
-
+                    <p><%= comment.created_at.to_s(:datetime) %></p>                          
                   <div class="user_review"><%= comment.text %></div>
+                  <%= link_to '削除',"/bookreview/:bookreview_id/comments/#{comment.id}", method: :delete %>
+                  <%= link_to '編集',"/bookreview/:bookreview_id/comments/#{comment.id}/edit/", method: :get %>
             </div>
