--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 
     <% if current_user.id == @user.id %>
-        <%# link_to "プロフィール編集", edit_user_path(current_user), {:class => "btn btn-primary withripple" }%>
+        <%= link_to "プロフィール編集", edit_user_path(current_user), {:class => "btn btn-primary withripple" }%>
     <% end %>
 
 
