--- a/app/views/bookreview/index.html.erb
+++ b/app/views/bookreview/index.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
-    <h2>書籍一覧</h2>
+    <h3>書籍一覧</h3>
   <div class="row">
     <% @bookreviews.each do |bookreview| %>
     <%= render partial: "bookreview", locals: { bookreview: bookreview } %>
     <% end %>
-    <%= paginate(@bookreviews) %>
   </div>
+        <div class="example2">
+          <%= paginate(@bookreviews) %>
+        </div>
 </div>
