--- a/app/views/list/index.html.erb
+++ b/app/views/list/index.html.erb
@@ -5,11 +5,15 @@
             <br>
             みんなのレビューを参考に、自分にぴったりの本を探してみませんか？</p>
             <br>
-            <div class="list-botton-left">
-                <a href="/bookreview">書籍の一覧を見る</a>
-            </div>
-            <div class="list-botton-right">
-                <a href="/ranking">ランキングを検索</a>
-            </div>
+            <div class="list-botton">
+                <div class="list-botton-left">
+                    <a href="/bookreview">書籍の一覧を見る</a>
+                </div>
+                <div class="list-botton-right">
+                    <a href="/ranking">ランキングを検索</a>
+                </div>
+            </div>    
         </div>
     </div>
+
+
