--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,4 +1,6 @@
 
+
+
 * {
   margin:0;
   padding:0;
@@ -9,7 +11,6 @@
 html{
 //   background-color: pink;
 // background-color: black;
-
 }
 
 body{
@@ -19,6 +20,7 @@ body{
 
 header {
     cursor: pointer;
+    height: 55px;
 }
 
 .user_nav {
@@ -29,7 +31,6 @@ header {
     justify-content: space-evenly;
     position: fixed;
     width: 100%;
-    height: 55px;
     background-color: black;
     opacity: 0.9;
     font-size: 20px;
@@ -106,7 +107,7 @@ input::placeholder {
   height: 24px;
   line-height: 29px;
   text-align: center;
-// 　position:absolute;
+//   position:absolute;
 //   display: table-cell;
 //   border-top: 10px;
 //   margin-top: 1px;
@@ -126,6 +127,7 @@ input::placeholder {
 }
 
 footer{
+    //   letter-spacing: 0.11em;
       background-color: black;
       color: white;
       opacity: 0.9;
@@ -133,6 +135,12 @@ footer{
       height: 55px;
       line-height: 55px;
 }
+
+footer small{
+    font-size: 87%;
+    letter-spacing: 0.06em;
+}
+
 // list/index.html.erb
 
 .main{
@@ -141,15 +149,21 @@ footer{
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 100vh;
     color: white; 
+    height: calc(100vh - 110px);
+    width: 100%;
+    display:table;
 }
 
 .main-content{
+  display:table-cell;
+  vertical-align:middle;
   text-align: center;
-  padding-top: 300px;
-  display: block;
+//   padding-top: 200px;
+//   display: block;
   font-size: 17px;
+  line-height: 29px;
+  letter-spacing: 0.11em
 }
 
 .main a{
@@ -157,23 +171,18 @@ footer{
     text-decoration: none;
 }
 
-// .main h1{
-//   text-align: center;
-//   padding-top: 300px;
-// }
+.main-content h1{
+    height: 38px;
+}
 
-// .main p{
-//   text-align: center;
-// }
-
-// .main a{
-//   display: block;
-//   text-align: center;
-// }
+.list-botton{
+  height: 60px;
+  line-height: 48px;
+}
 
 .list-botton-left {
     display: inline-block;
-    width: 160px;
+    width: 167px;
     height: 34px;
     border-radius: 5px;
     background-color: #000000;
@@ -184,7 +193,7 @@ footer{
 
 .list-botton-right {
     display: inline-block;
-    width: 160px;
+    width: 167px;
     height: 34px;
     border-radius: 5px;
     background-color: black;
@@ -208,9 +217,9 @@ color: #FF4500;
 }
 
 .field1 {
-     text-align: center;
-     width: 320px;
-     margin: 0 auto;
+    text-align: center;
+    width: 320px;
+    margin: 0 auto;
     padding-top: 200px;
 }
 
@@ -294,7 +303,11 @@ input[type="submit"]:hover {
 
 // index.html.erb
 
-.container h2{
+
+
+.container h3{
+    letter-spacing: 0.09em;
+    font-size: 1.9rem;
     text-align: center;
     margin-top: 150px;
     margin-bottom: 50px;
@@ -324,7 +337,7 @@ input[type="submit"]:hover {
 
 .box_wrapper{
     width: 262px;
-    height: 493px;
+    height: 405px;
     border: solid;
     border-width: thin;
     border-color: #e7e7e7;
@@ -340,44 +353,51 @@ input[type="submit"]:hover {
 
 .box_image_frame{
     width: 260px;
-    height: 250px;
+    height: 269px;
     margin-top: 10px;
+    // margin-left: 16px;
+    // width: 220px;
+    // min-height: 100%;
 }
 
 .box_image {
-    width: 200px;
-    height: 230px;
-    background-size: cover;
+  width: 100%;
+  height: 260px;
+//   object-fit: contain;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position:center center; 
+    // background-size: cover;
     margin: 0 auto;
+    max-width: 68%;
+    // object-fit: cover;
+    // object-fit: fill;
+    // object-fit: scale-down;
 }
 
 .box_title_frame{
     border-top: solid;
-    border-bottom: solid;
     border-color: #e7e7e7;
     border-width: thin;
     width: 260px;
-    height: 170px;
+    height: 95px;
 }
 
 .box_title{
     padding-top: 20px;
-    margin-left: 20px;
+    margin: 0 auto;
     width: 230px;
     height: 20px;
 }
 
 .assess{
-    margin: 80px;
-    width: 230px;
-    height: 20px;    
+    margin-top: 48px;
+    text-align: center;
+    // width: 230px;
+    // height: 20px;    
 }
 
-.favorite{
-    width: 230px;
-    height: 20px;    
-    padding-bottom: 20px;
-}
+
 
 // bookreview/show.html.erb
 
@@ -765,4 +785,90 @@ span.btn-schedule.is-unsold-3 .icon-unsold:before {
 // .til{
 //     width: 200px;
 //     height: 230px;
+// }
+
+// .paginate-wrapper{
+//     text-align: center;
+//     padding-bottom: 30px;
+// }
+
+.example2 li {
+display: inline;
+padding:10px 15px;
+border:1px #ccc solid;color:#000053;
+border-radius: 5px / 5px;
+}
+
+
+
+.fas fa-angle-double-right a{
+text-decoration: none;
+    color: #333333;
+}
+
+.fas fa-angle-double-left{
+display: inline;
+padding:10px 15px;
+border:1px #ccc solid;color:#000053;
+border-radius: 5px / 5px;
+}
+// .fas fa-angle-double-left
+
+
+// .pagination {
+//     // display: inline-block;
+//     // padding: 0;
+//     // margin: 0;
+//     text-align: center;
+//     padding-bottom: 30px;
+//     // color: #696969;
+//     // border: none;
+// }
+
+// .pagecurrent {
+// border: none;
+// }
+
+// .paginate-wrapper a{
+
+// }
+
+// .pagination-wrapper {
+
+// }
+
+// .pagination-wrapper {background-color: #ddd;}
+
+
+
+// .pagination .fas fa-angle-double-left .fas fa-angle-double-right{          
+//   border: none;     /*枠線をなくす*/
+//   color: #696969;   /*文字の色を変える*/
+// }
+
+
+
+// /* 表示しているページ番号のデザイン */
+// .pagination>.active>a {     
+//   background: #93c9ff;     /*背景の色を変える*/
+//   border-radius: 15px;     /*角を丸くする*/
+// }
+
+// /*ホバー時のデザイン*/
+// .pagination>li>a:hover {        
+//   border-radius: 15px;    /*角を丸くする*/
+// }
+
+// .pagination li:first-child a {
+//     border-top-left-radius: 5px;
+//     border-bottom-left-radius: 5px;
+// }
+
+// .pagination li:last-child a {
+//     border-top-right-radius: 5px;
+//     border-bottom-right-radius: 5px;
+// }
+
+// ul.pagination li a {
+//     font-size: 22px;
 // }
