--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">-->
   </head>
   
-
   <body>
     <header>
       <div class="user_nav">
@@ -27,7 +27,7 @@
             
             <%= form_tag('/bookreview/search', method: :get,class: "search_form") do %>
               <input class="input_search" name="keyword" placeholder="書籍のタイトルを入力" type="text">
-              <button class="button-search" title="検索" type="submit" value="Search"><span class="button-search2">Search</span></div></input>
+              <button class="button-search" title="検索" type="submit" value="Search"><span class="button-search2">Search</span></input>
             <% end %>
         </ul>
 
@@ -37,9 +37,10 @@
     </header>
     
     <%= yield %>
-    
+
       <footer>
-        <p>Bookレビュー©2020.All Rights Reserved.</p>
+        <small>Bookレビュー©2020.All Rights Reserved.</small>
       </footer>
+    
   </body>
 </html>
