--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <h2>Sign up</h2>
+  <h2 class="title">アカウントを作成</h2>
 
   <div class="field1">
     <%= f.label :email %><br />
