--- a/app/views/ranking/_ranking.html.erb
+++ b/app/views/ranking/_ranking.html.erb
@@ -1,8 +1,12 @@
 
           
 
-<div class="box_wrapper">
+<div class="box_wrapper_ranking">
+    
     <div class="box">
+        
+
+        
         <div class="box_image_frame">
             <a href="/bookreview/<%= bookreview.id %>">
                 <div class="box_image" style="background-image: url(<%= bookreview.image_url %>);">
@@ -25,12 +29,15 @@
                       </span>
                       <% end %>                       
             </div>
-            <div class="favorite">
-            <p>お気に入り</p>
-            </div>
+            
         </div>
+                      <p class="rank-label">
+                        <%= i %>位
+                      </p>
     </div>
 </div>
+
+
 
 
 
