--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -14,7 +14,8 @@ html{
 }
 
 body{
-    font-family: 游明朝体, "Yu Mincho", YuMincho, "Sawarabi Mincho", serif;
+    font-family: 游明朝体, "Yu Mincho", YuMincho,"Sawarabi Mincho", serif;
+    height: calc(100vh - 110px);
 // background-color: blue;
 }
 
@@ -117,6 +118,7 @@ input::placeholder {
 .button-search:active {
   opacity       : 0.9;         /* カーソル時透明度 */
   border: 1px solid #FF4500;
+  color:rgba(255,0,0,0.9);
 }
 
 .button-search2 {
@@ -204,10 +206,94 @@ footer small{
 // devise/registrations/new.html.erb
 // devise/sessions/new.html.erb
 
+// #error_explanation h2{
+//     color: orange;
+//     margin: 50px auto;
+// }
 
+// #error_explanation ul li{
+//     color: orange;
+//     margin: 0px auto;
+// }
+
+.field1_registrations {
+    text-align: center;
+    width: 320px;
+    margin: 0 auto;
+    padding-top: 200px;
+    color: #808080;
+}
+
+.field1_registrations label{
+    transform: translate(0%, 83%);
+    display: block;
+    // display:none;
+    text-align: left;
+    margin: left;
+}
+
+.aid2{
+         display: none;
+}
+
+.wrapper_registrations_new {
+    transform: translate(0%, -5%);
+}
 
 .title {
     text-align: center;
+    transform: translate(0%, 630%);
+    letter-spacing: 0.11em
+}
+
+em{
+    transform: translate(-9%, -55%);
+    // display:none;
+        display: block;
+    // display:none;
+}
+
+.field4{
+    transform: translate(0%, 0%);
+    letter-spacing: 0.15em;
+    width: 320px;
+    margin: 0 auto;
+    color: #808080;
+}
+
+input#user_image{
+    letter-spacing: 0.09em;
+}
+
+input#user_nickname:focus {
+	outline:0;
+}
+
+
+.field{
+    text-align: center;
+    transform: translate(0%, -3%);
+    letter-spacing: 0.11em;
+    width: 320px;
+    margin: 0 auto;
+    padding-top: 85px;
+    color: #808080;
+}
+
+// form-control floating-label
+
+    .floating-label {
+        border:none;
+        // border-bottom: solid 1px #D2D5D9;
+    //   border: 1px solid #eee;
+      transform: translate(0%, -175%);
+      letter-spacing: 0.08em;
+}
+
+// devise/sessions/new.html.erb
+
+.wrapper_sessions_new {
+    height: calc(100vh - 110px);
 }
 
 header a {
@@ -221,9 +307,9 @@ header a:hover {
 color: #FF4500;
 }
 
-.login h2{
+.login {
     text-align: center;
-    transform: translate(0%, 640%);
+    transform: translate(0%, 630%);
     letter-spacing: 0.11em
 }
 
@@ -232,21 +318,60 @@ color: #FF4500;
     width: 320px;
     margin: 0 auto;
     padding-top: 200px;
+    color: #808080;
 }
+
+.field1 label{
+    transform: translate(0%, 83%);
+    display: block;
+    // display:none;
+    text-align: left;
+    margin: left;
+}
+
+.field2 label{
+    transform: translate(0%, 50%);
+    // display:none;
+        display: block;
+    // display:none;
+    text-align: left;
+    margin: left;
+}
+
+.field2-sessions label{
+    transform: translate(0%, -16%);
+    // display:none;
+        display: block;
+    // display:none;
+    text-align: left;
+    margin: left;
+}
+
 
 .field2 {
      text-align: center;
      width: 320px;
      margin: 0 auto;
+     color: #808080;
 }
 
+.field2-sessions {
+     text-align: center;
+     width: 320px;
+     margin: 0 auto;
+     color: #808080;
+}
+
+
 .field3 {
+    //  display:none;
      text-align: center;
      width: 320px;
      margin: 0 auto;
 }
 
 .actions {
+    transform: translate(0%, 7%);
      text-align: center;
      width: 320px;
      margin: 0 auto;
@@ -254,35 +379,8 @@ color: #FF4500;
 }
 
 .aid{
-  justify-content: center;
-  display: flex;
+  display:none;
 }
-
-.aid a{
-color: #999c9f;
-    //   text-align: center;
-margin: 0px 15px 0px 10px;
-  text-decoration: none;
-//   transform: translate(40%, -472%);
-//   margin: 0px 10px;
-//   text-align: center;
-// margin: 0 auto;
-//   position: absolute;
-//   top: 700;
-//   right: 0;
-//   bottom: 0;
-//   left: 0;
-//   margin: auto;
-//   width: 80%;
-//   height: 3.2rem;
-    transform: translateY(-570%) translateX(15%);
-  
-}
-
-.aid a:hover{
-   color: black; 
-}
-
 
 input[type="email"] {
         box-sizing: border-box;
@@ -291,7 +389,7 @@ input[type="email"] {
         border: 1px solid rgba(255,255,255,0.8);
         border-bottom: solid 1px #D2D5D9;
         outline: none;
-        background-color: #E8F0FE;
+        // background-color: #E8F0FE;
         margin-top: 13px;
         margin-bottom: 40px;
         font-size: 0.9em;
@@ -309,12 +407,12 @@ input[type="email"] {
 input[type="password"] {
         box-sizing: border-box;
         width: 320px;
-        height: 30px;
+        height: 25px;
         border: 1px solid rgba(255,255,255,0.8);
         border-bottom: solid 1px #D2D5D9;
         
         outline: none;
-        background-color: #E8F0FE;
+        // background-color: #E8F0FE;
         margin-bottom: 38px;
         font-size: 0.9em;
 }
@@ -327,7 +425,7 @@ input[type="submit"] {
         display: block;
         background: rgb(0,0,0);
         color: white;
-        letter-spacing: .2em;
+        letter-spacing: 0.2em;
         font-size: 18px;
         cursor: pointer;
         margin: 0 auto;
@@ -367,7 +465,6 @@ input[type="submit"]:hover {
 .container{
     // padding-top:200px;
     width: 100%;
-    height: 100%;
     // background-color: #f5f5f5;     /*_bookreview 背景色指定 */
 }
 // _bookreview
@@ -438,23 +535,86 @@ input[type="submit"]:hover {
 
 // bookreview/show.html.erb
 
-.books_details{
-    margin: 0 auto;
-    width: 960px;
-    height: 100%;
+// .container_rate{
+//     border: solid;
+//     border-width: thin;
+//     border-color: #BBBBBB;
+//     border-radius: 2px;
+// }
+
+.search__query2{
+    border: solid;
+    border-width: thin;
+    border-color: #BBBBBB;
+    border-radius: 2px;
 }
 
+.row2 {
+    transform: translate(0%, 10%);
+    padding-bottom: 35px;
+}
+
+.col10.push1{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.col10.push1 p{
+        transform: translate(2%, 0%);
+}
+
+.btn.btn--block{
+    transform: translate(0%, 10%);
+    box-sizing: border-box;
+    border: 1px solid black;
+    width: 220px;
+    height: 40px;
+    display: block;
+    background: black;
+    color: white;
+    letter-spacing: 0.2em;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 auto;
+}
+
+.books_details{
+    margin: 0 auto;
+    width: 850px;
+}
+
+
+
 .books_details_sentence h2{
-    margin-top: 145px;
+    transform: translateY(-292%) translateX(0%);
+    margin-top: 227px;
     text-align: center;
 }
 
 .show{
   display: flex;
-  padding: 100px;
 }
 
 .bookreview_show_image{
+  width: 250px;
+  height: 300px;
+transform: translateY(-7%) translateX(12%);
+}
+
+.bookreview_show_image img{
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 180px;
+  height: 250px;
+}
+
+table{
+    width: 590px;
+    margin-left: 19px;
+}
+
+.show_sentence{
+    width: 590px;
 }
 
 .show_sentence tr{
@@ -465,14 +625,80 @@ input[type="submit"]:hover {
 }
 
 .show_sentence tr td{
-	padding: 10px 20px;
-	text-align: left;
+	padding: 13px 0px;
+	width: 1px;
+}
+
+.show_sentence h4{
+    font-size:20px;
+    transform: translateY(-47%) translateX(3%);
+}
+
+.show_review{
+    margin: 0 auto;
+    width: 850px;
 }
 
 .til{
     width: 200px;
     height: 230px;
 }
+
+hr{
+    border: solid;
+    border-width: thin;
+    border-color: #e7e7e7;
+    margin-top: 20px;
+	margin-bottom: 20px;
+	width: 850px;
+}
+
+.comments h2{
+	margin-bottom: 43px;
+}
+
+.user_comment{
+	margin-bottom: 35px;
+}
+
+.comments_created_at{
+transform: translateY(0%) translateX(0%);
+    color: #555;
+}
+
+.comments strong a{
+    text-decoration: none;
+    color: black;
+    font-weight: lighter;
+    display: block;
+}
+
+.comments strong a:hover{
+    color: #c45500;
+    text-decoration: underline;
+}
+
+.container_title{
+	margin-bottom: 43px;
+}
+
+.container_title2{
+    margin-top: 28px;
+	margin-bottom: 13px;
+}
+
+#comment_rate{
+    margin-top: 11px;
+    border: solid;
+    border-width: thin;
+    border-color: #e7e7e7;
+}
+
+
+// .rating-star-wrapper{
+//     color: #555;
+// }
+
 
 // 星
 
@@ -771,7 +997,6 @@ span.btn-schedule.is-unsold-3 .icon-unsold:before {
 .user_show{
     margin: 0 auto;
     width: 960px;
-    height: 100%;
 }
 
 .user_image img{
@@ -1103,4 +1328,77 @@ p.rank-label{
     border-bottom: 1px solid #e7e7e7; /* Gray */
     // background-color: #ddd;
     // color: white;
+}
+
+// users/edit.html
+
+.row.form{
+    margin-top: 145px; 
+    text-align: center;
+    width: 320px;
+}
+
+.user_edit{
+    letter-spacing: 0.2em;
+    padding-bottom: 45px;
+}
+
+.user_wrapper{
+    text-align: left;
+}
+
+.form-group.file{
+    margin-bottom: 20px;
+}
+
+.form-control.floating-label{
+    transform: translateY(30%) translateX(0%);
+}
+
+.form-group1{
+    margin-bottom: 31px;
+}
+
+.user-name{
+    margin-bottom: 10px;
+}
+
+#user_nickname{
+    margin-top: 8px;
+    padding-right: 150px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.form-group2{
+    margin-bottom: 31px;
+}
+
+.user-login-mail{
+    margin-bottom: 10px;
+}
+
+#user_email{
+    padding-right: 150px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    outline: none;
+}
+
+.user_profile{
+    margin-bottom: 5px;
+}
+
+.form-group3{
+    margin-top: 31px;
+}
+
+.btn.btn-primary.withripple{
+    margin-top: 44px;
+}
+
+// views/comments/edit.html
+
+.form-group-edit{
+        height: calc(100vh - 110px);
 }
