--- a/app/views/bookreview/show.html.erb
+++ b/app/views/bookreview/show.html.erb
@@ -1,17 +1,17 @@
+
 <div class="books_details">
   <div class="books_details_sentence">
   <h2>書籍詳細情報</h2>
   </div>
+  
+
 
   <div class="show">
-    <div class="bookreview_show_image"><%= image_tag @bookreviews.image_url,:size =>'180x250'%>
+    <div class="bookreview_show_image"><%= image_tag @bookreviews.image_url%>
     </div>
     <div class="show_sentence">
-<table>
-    <tr>
-        <td width="100">書籍名</td>
-        <td><%= @bookreviews.title %></td>
-    </tr>
+      <h4><%= @bookreviews.title %></h4>
+  <table>
     <tr>
         <td>価格</td>
         <td><%= @bookreviews.price %></td>
@@ -35,41 +35,60 @@
 
     </div>
   </div>
+  
+  <div class="show_review">
+  <hr>
+  
+  
+      <div class="comments">   
+      <h2>みんなのレビュー</h2>
+      <% if @remarks %>
+        <% @remarks.each do |remark| %>
+              <div class="user_comment">
+          <p>
+            <strong><%= link_to remark.user.nickname, "/users/#{remark.user_id}" %></strong>
+            <br>
+            <span class="rating-star"><i class="star-actived rate-<%= remark.rate %>0"></i></span>
+            <p class="comments_created_at">投稿日 <%= remark.created_at.to_s(:datetime) %></p>
+            <br>
+            <%= remark.text %>
+          </p>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+    
+      
+  <div class="container">
 
-  <div class="container"> 
     <!-- ここからフォーム -->
     <% if current_user %>
+          <hr>
+
+        <h2 class="container_title">この書籍のレビューを投稿しよう</h2>
+
         <%= form_for [@bookreviews, @comments] do |f| %>
-          <div style="margin: 8px 0">
-            <%= f.label :評価, style: { 'margin-right' => 8 } %>
+          <h4>あなたの評価</h4>
+          <div style="container_rate">
+            <%= f.label :_, style: { 'margin-right' => 8 } %>
             <%= f.number_field :rate, placeholder: '評価', value: 1, max: 10, min: 1, html: { class: "search__query", style: 'text-align: right;' } %>
           </div>
-          <div style="margin: 8px 0">
-            <%= f.text_area :text, placeholder: 'レビューを書いてね！', style: 'width: 100%; height: 300px;' %>
+          <h4 class="container_title2">ここにレビューを記入してください</h4>
+
+          <div style="container_text">
+            <%= f.text_area :text, placeholder: 'レビューを書く', style: 'width: 100%; height: 200px;',class: "search__query2" %>
           </div>
-          <div class="row">
+          <div class="row2">
             <div class="col10 push1">
-              <%= button_tag type: "submit", class: "btn btn--block" do %>
-              投稿する<i class="icon-arrow-right"></i>
+              <%= button_tag type: "submit", class: "btn btn--block" do %><p>投稿する</p><i class="icon-arrow-right"></i>
               <% end %>
             </div>
           </div>
         <% end %>
     <% end %>
 
-    <div class="comments">   
-      <h4>＜コメント一覧＞</h4>
-      <% if @remarks %>
-        <% @remarks.each do |remark| %>
-          <p>
-            <strong><%= link_to remark.user.nickname, "/users/#{remark.user_id}" %>：</strong>
-            <span class="rating-star"><i class="star-actived rate-<%= remark.rate %>0"></i></span>
-            <p><%= remark.created_at.to_s(:datetime) %></p>                          
-            <%= remark.text %>
-          </p>
-        <% end %>
-      <% end %>
-    </div>
 
+
+  </div>
   </div>
 </div>
