--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,20 +1,22 @@
-
+<div class="wrapper_registrations_new">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <h2 class="title">アカウントを作成</h2>
+  <div class="title">
+    <h2>新規登録</h2>
+  </div>
 
-  <div class="field1">
+  <div class="field1_registrations">
     <%= f.label :email %><br />
-    <%= f.email_field :email,autofocus: true, :placeholder => 'メールアドレスを入力' %>
+    <%= f.email_field :email,autofocus: true %>
   </div>
 
   <div class="field2">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password",:placeholder => 'パスワードを入力'%>
+    <%= f.password_field :password, autocomplete: "new-password"%>
   </div>
 
   <div class="field3">
@@ -23,16 +25,19 @@
   </div>
   
   <div class="field4"><%= f.label :nickname %><br />
-    <%= f.text_field :nickname, placeholder: 'ニックネームを入力(必須)' %> %></div>
-    <div class="field">
-    <%= f.file_field :image %>
+    <%= f.text_field :nickname %></div>
+  
+  <div class="field">
+    <%= f.file_field :image, class: "floating-label" %>
   </div>
 
   <div class="actions">
    <%= f.submit "Sign up" %>
   </div>
-
-  <div class="aid">
+  
+  <div class="aid2">
 <%= render "devise/shared/links" %>
   </div>
 <% end %>
+</div>
+
