--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,24 +2,41 @@
 <div class="row form">
   <div class="col-lg-12">
     <%= form_for current_user do |f| %>
-      <h2>プロフィール画像</h2>
-      <div class="form-group file">
-        <%= f.file_field :image, class: "form-control floating-label", placeholder: "画像アップロード" %>
-      </div>
-      <h2>登録情報</h2>
-      <div class="form-group">
+    <h2 class="user_edit">登録情報</h2>
+    <div class="user_wrapper">
+      
+                  <div class="form-group1">
+
+        <h3 class="user-name">ニックネーム</h3>
         <div class="col-lg-6">
           <%= f.text_field :nickname, placeholder: "nickname", class: "form-control" %>
         </div>
       </div>
-      <div class="form-group">
-        <div class="col-lg-6">
+      
+            <div class="form-group2">
+              <h3 class="user-login-mail">ログインメールアドレス</h3>
+        <div class="col-lg-7">
           <%= f.text_field :email, placeholder: "email", class: "form-control" %>
         </div>
       </div>
-      <div class="form-group">
-        <%= f.submit "送信", class: "btn btn-primary withripple" %>
+      
+
+    
+      <h3 class="user_profile">プロフィール画像</h3>
+      
+      <!--<hr>-->
+      
+      <div class="form-group file">
+        <%= f.file_field :image, class: "form-control floating-label", placeholder: "画像アップロード" %>
+      </div>
+
+              <!--<hr>-->
+
+
+      <div class="form-group3">
+        <%= f.submit "更新する", class: "btn btn-primary withripple" %>
       </div>
     <% end %>
+    </div>
   </div>
 </div>
